# worktree-navigator

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: bash-install.sh  zsh-install.sh
src/: app.rs  cli.rs  config.rs  git.rs  github.rs  main.rs  pty.rs  text_input.rs  types.rs  ui.rs  update.rs  version.rs
tests/: cli_e2e.rs
